# open-lpr-sdk

./: .gitignore  CMakeLists.txt  embed_model.py  export_models.py
.github/workflows/: release.yml
android/: build.gradle  settings.gradle
android/openlprsdk/: build.gradle
android/openlprsdk/src/main/: AndroidManifest.xml
android/openlprsdk/src/main/java/com/digitaldivas/openlprsdk/: OpenLprSdk.kt
ios/: README.md
ios/openlprsdk/openlprsdk/: openlprsdk.swift
ios/openlprsdk/openlprsdk.xcodeproj/: project.pbxproj
ios/openlprsdk/openlprsdk.xcodeproj/project.xcworkspace/xcuserdata/ezequielramos.xcuserdatad/: UserInterfaceState.xcuserstate
ios/openlprsdk/openlprsdk.xcodeproj/xcuserdata/ezequielramos.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/openlprsdk/openlprsdk/openlprsdk.docc/: openlprsdk.md
src/: lpr.cpp
tests/: test.cpp
